Fix: vertical scrollbar

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,6 +6,7 @@
 body {
     height: 100%;
     background-color: #000;
+    overflow-y: hidden;
 }
 
 #game{
